--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "axios": "^1.3.2",
     "chalk": "^5.2.0",
     "commander": "^10.0.0",
-    "formdata-node": "^5.0.0"
+    "formdata-node": "^5.0.0",
+    "inquirer": "^9.1.4"
   },
   "type": "module",
   "devDependencies": {
