--- a/package.json
+++ b/package.json
@@ -14,12 +14,11 @@
   "dependencies": {
     "axios": "^1.3.2",
     "chalk": "^5.2.0",
+    "cheerio": "^1.0.0-rc.12",
     "commander": "^10.0.0",
     "formdata-node": "^5.0.0",
-    "inquirer": "^9.1.4",
-    "cheerio": "^1.0.0-rc.12",
-    "got": "^12.5.3"
+    "got": "^12.5.3",
+    "inquirer": "^9.1.4"
   },
-  "type": "module",
-  "devDependencies": {}
+  "type": "module"
 }
