--- a/package.json
+++ b/package.json
@@ -5,19 +5,25 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "bin": {
+    "deploy": "./src/deploy.js",
+    "noleave": "./src/rebot.js",
+    "token": "./src/token.js"
+  },
+  "exports": "./index.js",
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
     "axios": "^1.3.2",
     "chalk": "^5.2.0",
-    "commander": "^10.0.0",
-    "formdata-node": "^5.0.0",
-    "inquirer": "^9.1.4"
-  },
-  "type": "module",
-  "devDependencies": {
     "cheerio": "^1.0.0-rc.12",
-    "got": "^12.5.3"
-  }
+    "commander": "^10.0.0",
+    "crypto": "^1.0.1",
+    "formdata-node": "^5.0.0",
+    "got": "^12.5.3",
+    "inquirer": "^9.1.4",
+    "robotjs": "^0.6.0"
+  },
+  "type": "module"
 }
