--- a/package.json
+++ b/package.json
@@ -5,6 +5,12 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "bin": {
+    "deploy": "./src/deploy.js",
+    "noleave": "./src/rebot.js",
+    "token": "./src/token.js"
+  },
+  "exports": "./index.js",
   "author": "",
   "license": "ISC",
   "description": "",
@@ -15,7 +21,9 @@
     "commander": "^10.0.0",
     "crypto": "^1.0.1",
     "formdata-node": "^5.0.0",
-    "inquirer": "^9.1.4"
+    "got": "^12.5.3",
+    "inquirer": "^9.1.4",
+    "robotjs": "^0.6.0"
   },
   "type": "module"
 }
