--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "bin": {
     "deploy": "./src/deploy.js",
     "noleave": "./src/rebot.js",
-    "token": "./src/token.js"
+    "token": "./src/token.js",
+    "stwin": "./src/shutdown.js"
   },
   "exports": "./index.js",
   "author": "",
